a) Removed API to get all the customers b) Removed API to create customer in swagger.yaml
